--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   dart_mercure: ^0.2.1
   provider: ^6.0.2
   flutter_lorem: ^2.0.0
+  video_player: ^2.2.11
+  chewie:
+  just_audio: ^0.9.18
+  record:
+  # wechat_camera_picker: ^2.6.3
+  fluent_ui:
 dev_dependencies:
   flutter_test:
     sdk: flutter
